// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DaemonClient tests should process data when received 1`] = `
[
  "feed",
  "🐶",
]
`;

exports[`DaemonClient tests should process data when received 2`] = `
{
  "response": {
    "argv": [
      "feed",
      "🐶",
    ],
    "cwd": "fake",
    "env": {
      "FORCE_COLOR": "0",
    },
    "stdin": null,
    "stdinLength": 0,
    "user": "ZmFrZQ==",
  },
  "stream": {
    "end": [MockFunction],
    "on": [MockFunction] {
      "calls": [
        [
          "end",
          [Function],
        ],
        [
          "close",
          [Function],
        ],
        [
          "data",
          [Function],
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
        {
          "type": "return",
          "value": undefined,
        },
        {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "write": [MockFunction],
  },
}
`;

exports[`DaemonClient tests should process response with binary stdin data when received 1`] = `
[
  "feed",
  "🐱",
]
`;

exports[`DaemonClient tests should process response with binary stdin data when received 2`] = `
{
  "response": {
    "argv": [
      "feed",
      "🐱",
    ],
    "cwd": "fake",
    "env": {},
    "stdin": null,
    "stdinLength": 1024,
    "user": "ZmFrZQ==",
  },
  "stdinStream": Promise {},
  "stream": {
    "end": [MockFunction],
    "on": [MockFunction] {
      "calls": [
        [
          "end",
          [Function],
        ],
        [
          "close",
          [Function],
        ],
        [
          "data",
          [Function],
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
        {
          "type": "return",
          "value": undefined,
        },
        {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "write": [MockFunction],
  },
}
`;
